Finish all the html files code.

--- a/files/detailPage/detail.html
+++ b/files/detailPage/detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHI_GA Uplaod</title>
+    <title>SHI_GA Detail</title>
     <link rel="stylesheet" href="css/">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -24,23 +24,66 @@
                 <a href="files/uplaodPage/upload.html">Upload</a>
             </div>
         </nav>
-        <div class="contain">
-            <div class="head">
-                <h2>All product</h2>
-                <button>Upload product</button>
-            </div>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Brand</th>
-                        <th>Price</th>
-                        <th>Description</th>
-                        <th>Edit or Delete</th>
-                    </tr>
-            </table>
+        <div class="title">
+            <h1>Title</h1>
         </div>
-
+        <div class="info-detail">
+            <div class="info">
+                <div class="imgae"></div>
+                <div class="info-text">
+                    <p>Title</p>
+                    <p>Price: <span></span></p>
+                    <p>Availablity: <span></span></p>
+                    <p>Product: <span></span></p>
+                    <p>Series: <span></span></p>
+                    <p>Screen: <span></span></p>
+                    <p>Color: <span></span></p> 
+                    <p>CPU: <span></span></p> 
+                    <p>RAM: <span></span></p>
+                    <p>storage: <span></span></p>
+                </div>  
+                <p>Description: <span></span></p>  
+        </div>
+        <div class="other">
+            <div class="list-1">
+                <div class="card">
+                    <div class="sub-card">
+                        <img src="#####" alt="">
+                    </div>
+                    <div class="text-card">
+                        <p>ASUS</p>
+                        <div class="sub-text">
+                            <p></p>
+                            <p>$900</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="sub-card">
+                        <img src="#####" alt="">
+                    </div>
+                    <div class="text-card">
+                        <p>ASUS</p>
+                        <div class="sub-text">
+                            <p></p>
+                            <p>$900</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="sub-card">
+                        <img src="#####" alt="">
+                    </div>
+                    <div class="text-card">
+                        <p>ASUS</p>
+                        <div class="sub-text">
+                            <p></p>
+                            <p>$900</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="footer">
             <div class="footer-left">
                 <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="250px"></a>
