--- a/index.html
+++ b/index.html
@@ -1,16 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHI_GA</title>
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
 <body>
-    <nav>
-        <div class="navbar-left"></div>
-        <div class="navbar-mid"></div>
-        <div class="navbar-right"></div>
-    </nav>
+    <div class="container">
+        <nav>
+            <div class="navbar-left">
+                <a href="index.html">Home</a>
+                <a href="files/productPage/product.html">Product</a>
+            </div>
+            <div class="navbar-mid">
+                <a href="index.html"><img src="img/shi_ga-logo (1).png" alt="" width="150px"></a>
+            </div>
+            <div class="navbar-right">
+                <a href="files/uplaodPage/upload.html">Upload</a>
+            </div>
+        </nav>
+        <div class="header">
+            <h1>Make yourself at home</h1>
+            <p>We make a good quality for customer</p>
+            <div class="search">
+                <input type="text" class="search-input" placeholder="Search for a product">
+                <i class="material-icons">search</i>
+            </div>
+        </div>
+        <div class="popular-brand">
+            <h1>Popular Brand Name</h1>
+            <div class="show-img">
+                <h3>ASUS</h3>
+            </div>
+            <div class="show-img">
+                <h3>MSI</h3>
+            </div>
+            <div class="show-img">
+                <h3>Lenovo</h3>
+            </div>
+            <div class="show-img">
+                <h3>Macbook</h3>
+            </div>
+        </div>
+        <div class="list-item">
+            <div class="detail">
+                <div class="img">
+                    <img src="#####" alt="">
+                </div>
+                <div class="info">
+                    <h4>MSI</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
+                        necessitatibus neque pariatur, libero error tenetur?</p>
+                    <button>Views Detail</button>
+                </div>
+            </div>
+            <div class="detail">
+                <div class="img">
+                    <img src="#####" alt="">
+                </div>
+                <div class="info">
+                    <h4>MSI</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
+                        necessitatibus neque pariatur, libero error tenetur?</p>
+                    <button>Views Detail</button>
+                </div>
+            </div>
+            <div class="detail">
+                <div class="img">
+                    <img src="#####" alt="">
+                </div>
+                <div class="info">
+                    <h4>MSI</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
+                        necessitatibus neque pariatur, libero error tenetur?</p>
+                    <button>Views Detail</button>
+                </div>
+            </div>
+        </div>
+        <div class="info-item">
+            <div class="info">
+                <h4>MSI</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
+                    necessitatibus neque pariatur, libero error tenetur?</p>
+                <button>Views Detail</button>
+            </div>
+        </div>
+
+        <nav>
+            <div class="navbar-left">
+                <a href="index.html">Home</a>
+                <a href="files/productPage/product.html">Product</a>
+            </div>
+            <div class="navbar-mid">
+                <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="150px"></a>
+            </div>
+            <!-- <div class="navbar-right">
+            <a href="files/uplaodPage/upload.html">Upload</a>
+        </div> -->
+        </nav>
+        <div class="footer">
+            <div class="footer-left">
+                <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="250px"></a>
+                <div class="text">
+                    <p>Phone: 011 629 387</p>
+                    <p>Email: name@gmail.com</p>
+                    <p>Address: A051, 1 national raod, Phnom Penh, cambodia.</p>
+                    <p>Working days/Hours: Mon - Sun / 8:00 AM - 8:00 PM</p>
+                </div>
+            </div>
+            <div class="footer-center">
+                <h2>Content</h2>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="files/productPage/product.html">Product</a></li>
+                    <li><a href="files/uplaodPage/upload.html">Upload</a></li>
+                    <li><a href="files/help.html">Upload</a></li>
+            </div>
+            <div class="footer-right">
+                <div class="search">
+                    <input type="text" class="search-input" placeholder="Search for a product">
+                    <i class="material-icons">search</i>
+                </div>
+                <div class="media">
+                    <img src="###" alt="">
+                    <img src="###" alt="">
+                    <img src="###" alt="">
+                    <img src="###" alt="">
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
+
 </html>
