Add new feature nav bar style to all pages.

--- a/files/detailPage/detail.html
+++ b/files/detailPage/detail.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHI_GA Detail</title>
-    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="../../css/style.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
@@ -14,14 +14,14 @@
     <div class="container">
         <nav>
             <div class="navbar-left">
-                <a href="index.html">Home</a>
-                <a href="files/productPage/product.html">Product</a>
+                <a href="../../index.html">Home</a>
+                <a href="../productPage/product.html" class="active">Product</a>
             </div>
             <div class="navbar-mid">
-                <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="150px"></a>
+                <a href="../../index.html"><img src="../../img/shi_ga-logo (1).png" alt="" width="150px"></a>
             </div>
             <div class="navbar-right">
-                <a href="files/uplaodPage/upload.html">Upload</a>
+                <a href="../uplaodPage/upload.html">Upload</a>
             </div>
         </nav>
         <div class="title">
