--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav>
             <div class="navbar-left">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="acitve">Home</a>
                 <a href="files/productPage/product.html">Product</a>
             </div>
             <div class="navbar-mid">
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <nav>
+        <!-- <nav>
             <div class="navbar-left">
                 <a href="index.html">Home</a>
                 <a href="files/productPage/product.html">Product</a>
@@ -102,7 +102,7 @@
             <!-- <div class="navbar-right">
             <a href="files/uplaodPage/upload.html">Upload</a>
         </div> -->
-        </nav>
+        </nav> -->
         <div class="footer">
             <div class="footer-left">
                 <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="250px"></a>
