Add new feature footer style to all pages.

--- a/files/detailPage/detail.html
+++ b/files/detailPage/detail.html
@@ -86,7 +86,7 @@
         </div>
         <div class="footer">
             <div class="footer-left">
-                <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="250px"></a>
+                <a href="../../index.html"><img src="../../img/shi_ga-logo (1).png" alt="" width="250px"></a>
                 <div class="text">
                     <p>Phone: 011 629 387</p>
                     <p>Email: name@gmail.com</p>
@@ -97,10 +97,10 @@
             <div class="footer-center">
                 <h2>Content</h2>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="files/productPage/product.html">Product</a></li>
-                    <li><a href="files/uplaodPage/upload.html">Upload</a></li>
-                    <li><a href="files/help.html">Upload</a></li>
+                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="../productPage/product.html">Product</a></li>
+                    <li><a href="../uplaodPage/upload.html">Upload</a></li>
+                    <li><a href="../help.html">Upload</a></li>
             </div>
             <div class="footer-right">
                 <div class="search">
@@ -108,10 +108,10 @@
                     <i class="material-icons">search</i>
                 </div>
                 <div class="media">
-                    <img src="###" alt="">
-                    <img src="###" alt="">
-                    <img src="###" alt="">
-                    <img src="###" alt="">
+                    <img src="../../img/Facebook_Logo_(2019).png" alt="" width="40px">  
+                    <img src="../../img/ig.png" alt="" width="40px">
+                    <img src="../../img/tw.png" alt="" width="40px">
+                    <img src="../../img/tele.png" alt="" width="40px">
                 </div>
             </div>
 
