--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
             <div class="navbar-mid">
                 <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="150px"></a>
             </div>
-            <!-- <div class="navbar-right">
+            <div class="navbar-right">
             <a href="files/uplaodPage/upload.html">Upload</a>
         </div> -->
-        </nav> -->
+        </nav> 
         <div class="footer">
             <div class="footer-left">
-                <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="250px"></a>
+                <a href="index.html"><img src="img/shi_ga-logo (1).png" alt="" width="250px"></a>
                 <div class="text">
                     <p>Phone: 011 629 387</p>
                     <p>Email: name@gmail.com</p>
@@ -119,7 +119,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="files/productPage/product.html">Product</a></li>
                     <li><a href="files/uplaodPage/upload.html">Upload</a></li>
-                    <li><a href="files/help.html">Upload</a></li>
+                    <li><a href="files/help.html">Help</a></li>
+                </ul>
             </div>
             <div class="footer-right">
                 <div class="search">
@@ -127,10 +128,10 @@
                     <i class="material-icons">search</i>
                 </div>
                 <div class="media">
-                    <img src="###" alt="">
-                    <img src="###" alt="">
-                    <img src="###" alt="">
-                    <img src="###" alt="">
+                    <img src="img/Facebook_Logo_(2019).png" alt="" width="40px">  
+                    <img src="img/ig.png" alt="" width="40px">
+                    <img src="img/tw.png" alt="" width="40px">
+                    <img src="img/tele.png" alt="" width="40px">
                 </div>
             </div>
 
