Applys style on home page.

--- a/index.html
+++ b/index.html
@@ -25,84 +25,83 @@
             </div>
         </nav>
         <div class="header">
-            <h1>Make yourself at home</h1>
-            <p>We make a good quality for customer</p>
-            <div class="search">
-                <input type="text" class="search-input" placeholder="Search for a product">
-                <i class="material-icons">search</i>
+            <div class="text-header">
+                <h1>Make yourself at <span>home</span></h1>
+                <p>We make a good quality for customer</p>
+                <div class="search">
+                    <input type="text" class="search-input" placeholder="Search for a product">
+                    <i class="material-icons">search</i>
+                </div>
             </div>
         </div>
         <div class="popular-brand">
             <h1>Popular Brand Name</h1>
-            <div class="show-img">
-                <h3>ASUS</h3>
-            </div>
-            <div class="show-img">
-                <h3>MSI</h3>
-            </div>
-            <div class="show-img">
-                <h3>Lenovo</h3>
-            </div>
-            <div class="show-img">
-                <h3>Macbook</h3>
+            <div class="list-brand">
+                <div class="show-img">
+                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <h1>ASUS</h1>
+                </div>
+                <div class="show-img">
+                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <h1>MSI</h1>
+                </div>
+                <div class="show-img">
+                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <h1>Lenovo</h1>
+                </div>
+                <div class="show-img">
+                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <h1>Macbook</h1>
+                </div>
             </div>
         </div>
         <div class="list-item">
             <div class="detail">
                 <div class="img">
-                    <img src="#####" alt="">
+                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="">
                 </div>
                 <div class="info">
-                    <h4>MSI</h4>
+                    <h1>MSI</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
                         necessitatibus neque pariatur, libero error tenetur?</p>
                     <button>Views Detail</button>
                 </div>
             </div>
             <div class="detail">
-                <div class="img">
-                    <img src="#####" alt="">
-                </div>
+
                 <div class="info">
-                    <h4>MSI</h4>
+                    <h1>MSI</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
                         necessitatibus neque pariatur, libero error tenetur?</p>
                     <button>Views Detail</button>
                 </div>
+                <div class="img">
+                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="">
+
+                </div>
             </div>
             <div class="detail">
                 <div class="img">
-                    <img src="#####" alt="">
+                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="">
                 </div>
                 <div class="info">
-                    <h4>MSI</h4>
+
+                    <h1>MSI</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
                         necessitatibus neque pariatur, libero error tenetur?</p>
                     <button>Views Detail</button>
                 </div>
             </div>
         </div>
-        <div class="info-item">
+        <!-- <div class="info-item">
+            <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="">
             <div class="info">
-                <h4>MSI</h4>
+                <h1>MSI</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
                     necessitatibus neque pariatur, libero error tenetur?</p>
                 <button>Views Detail</button>
             </div>
-        </div>
-
-        <!-- <nav>
-            <div class="navbar-left">
-                <a href="index.html">Home</a>
-                <a href="files/productPage/product.html">Product</a>
-            </div>
-            <div class="navbar-mid">
-                <a href="index.html"><img src="img/shi_ga-logo.png" alt="" width="150px"></a>
-            </div>
-            <div class="navbar-right">
-            <a href="files/uplaodPage/upload.html">Upload</a>
         </div> -->
-        </nav> 
         <div class="footer">
             <div class="footer-left">
                 <a href="index.html"><img src="img/shi_ga-logo (1).png" alt="" width="250px"></a>
@@ -114,7 +113,7 @@
                 </div>
             </div>
             <div class="footer-center">
-                <h2>Content</h2>
+                <h1>Content</h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="files/productPage/product.html">Product</a></li>
@@ -128,7 +127,7 @@
                     <i class="material-icons">search</i>
                 </div>
                 <div class="media">
-                    <img src="img/Facebook_Logo_(2019).png" alt="" width="40px">  
+                    <img src="img/Facebook_Logo_(2019).png" alt="" width="40px">
                     <img src="img/ig.png" alt="" width="40px">
                     <img src="img/tw.png" alt="" width="40px">
                     <img src="img/tele.png" alt="" width="40px">
