Apply style on Upload page and form dialog.

--- a/files/detailPage/detail.html
+++ b/files/detailPage/detail.html
@@ -86,7 +86,7 @@
         </div>
         <div class="footer">
             <div class="footer-left">
-                <a href="../../index.html"><img src="../../img/shi_ga-logo (1).png" alt="" width="250px"></a>
+                <a href="../index.html"><img src="../../img/shi_ga-logo (1).png" alt="" width="250px"></a>
                 <div class="text">
                     <p>Phone: 011 629 387</p>
                     <p>Email: name@gmail.com</p>
