Add some new style on card.

--- a/files/productPage/product.html
+++ b/files/productPage/product.html
@@ -28,9 +28,9 @@
             <button><i class="material-icons">arrow_right_alt</i></button>
         </div>
         <div class="main-image">
-            <img src="###" alt="">
-            <img src="###" alt="">
-            <img src="###" alt="">
+            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="500px">
+            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="500px">
+            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="500px">
         </div>
         <div class="content-list">
             <aside>
@@ -64,44 +64,54 @@
             </aside>
             <main>
                 <div class="list-1">
-                    <div class="card">
-                        <div class="sub-card">
-                            <img src="#####" alt="">
-                        </div>
-                        <div class="text-card">
-                            <p>ASUS</p>
-                            <div class="sub-text">
-                                <p></p>
-                                <p>$900</p>
+                    <a href="../detailPage/detail.html">
+                        <div class="card">
+                            <div class="sub-card">
+                                <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt=""
+                                    width="300px">
+                            </div>
+                            <div class="text-card">
+                                <p>ASUS</p>
+                                <div class="sub-text">
+                                    <img src="../../img/star.png" alt="" width="100px">
+                                    <p>$900</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <div class="sub-card">
-                            <img src="#####" alt="">
-                        </div>
-                        <div class="text-card">
-                            <p>ASUS</p>
-                            <div class="sub-text">
-                                <p></p>
-                                <p>$900</p>
+                    </a>
+
+                    <a href="../detailPage/detail.html">
+                        <div class="card">
+                            <div class="sub-card">
+                                <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt=""
+                                    width="300px">
+                            </div>
+                            <div class="text-card">
+                                <p>ASUS</p>
+                                <div class="sub-text">
+                                    <img src="../../img/star.png" alt="" width="100px">
+                                    <p>$900</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <div class="sub-card">
-                            <img src="#####" alt="">
-                        </div>
-                        <div class="text-card">
-                            <p>ASUS</p>
-                            <div class="sub-text">
-                                <p></p>
-                                <p>$900</p>
+                    </a>
+                    <a href="../detailPage/detail.html">
+                        <div class="card">
+                            <div class="sub-card">
+                                <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt=""
+                                    width="300px">
+                            </div>
+                            <div class="text-card">
+                                <p>ASUS</p>
+                                <div class="sub-text">
+                                    <img src="../../img/star.png" alt="" width="100px">
+                                    <p>$900</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="list-2">
+                <!-- <div class="list-2">
                     <div class="card">
                         <div class="sub-card">
                             <img src="#####" alt="">
@@ -176,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </main>
             <div class="bottom">
                 <ul>
@@ -215,7 +225,7 @@
                     <i class="material-icons">search</i>
                 </div>
                 <div class="media">
-                    <img src="../../img/Facebook_Logo_(2019).png" alt="" width="40px">  
+                    <img src="../../img/Facebook_Logo_(2019).png" alt="" width="40px">
                     <img src="../../img/ig.png" alt="" width="40px">
                     <img src="../../img/tw.png" alt="" width="40px">
                     <img src="../../img/tele.png" alt="" width="40px">
