--- a/files/uplaodPage/upload.html
+++ b/files/uplaodPage/upload.html
@@ -34,7 +34,7 @@
                             <label>Brand model: </label>
                             <input id="title" type="text" />
                             <label>Price: </label>
-                            <input id="price" type="text"/>
+                            <input id="price" type="text" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" data-type="currency" placeholder="$1,000,000.00"/>
                             <label>Availablity: </label>
                             <input id="availablity" type="text"/>
                             <label>Screen size: </label>
@@ -67,7 +67,7 @@
                         <label for="inputImg" id="image">
                             Select Image <br/>
                             <i class="material-icons">add_a_photo</i>
-                            <input id="inputImg" type="file"/>
+                            <input id="inputImg" type="file" accept=""/>
                             <br/>
                             <span id="imageName"></span>
                         </label>
