[PRODUCT_PAGE]: add new feature rendercard and update showslide by image in product array.

--- a/files/productPage/product.html
+++ b/files/productPage/product.html
@@ -30,20 +30,32 @@
 
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:100%">
+                    <div class="numbertext">1 / 5</div>
+                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" style="width:100%">
+                    <div class="numbertext">2 / 5</div>
+                    <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" style="width:65%">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:100%">
+                    <div class="numbertext">3 / 5</div>
+                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">4 / 5</div>
+                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">5 / 5</div>
+                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
                     <div class="text">Caption Three</div>
                 </div>
 
@@ -87,7 +99,7 @@
             </aside>
             <div class="right-side">
                 <main>
-                    <div class="list-1">
+                    <!-- <div class="list-1">
                         <a href="../detailPage/detail.html">
                             <div class="card">
                                 <div class="sub-card">
@@ -287,7 +299,7 @@
                         </a>
 
                         
-                    </div>
+                    </div> -->
                    
                 </main>
                 <div class="bottom">
