[UPLAOD_PAGE]: Add currency before price and input price can't input stirng.

--- a/files/uplaodPage/upload.html
+++ b/files/uplaodPage/upload.html
@@ -34,7 +34,7 @@
                             <label>Brand model: </label>
                             <input id="title" type="text" />
                             <label>Price: </label>
-                            <input id="price" type="text" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" data-type="currency" placeholder="$1,000,000.00"/>
+                            <input type="number" name="currency-field" id="price" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">                            
                             <label>Availablity: </label>
                             <input id="availablity" type="text"/>
                             <label>Screen size: </label>
