[UPLOAD_PAGE]: add nex feature add id.

--- a/files/detailPage/detail.html
+++ b/files/detailPage/detail.html
@@ -146,7 +146,7 @@
         <div class="box-dialog-chart" style="display: none;">
             <dialog open>
                 <header>To buy</header>
-                <div class="list-chart"></di>
+                <div class="list-cart"></div>
    
         </div>
         </dialog>
