[SHOW_CART]: can add product that favorite to dialog.

--- a/files/detailPage/detail.html
+++ b/files/detailPage/detail.html
@@ -143,14 +143,12 @@
             </div>
 
         </div>
-        <div class="box-dialog-chart" style="display: none;">
+        <div class="box-dialog-chart">
             <dialog open>
                 <header>To buy</header>
                 <div class="list-cart"></div>
-   
+            </dialog>
         </div>
-        </dialog>
-    </div>
 
 </body>
 <script src="js/detail.js"></script>
